discussion/kv_engine/176999/176999_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Allow for multiple suites in testapp_serverless

Move the code related to starting and stopping the cluster
out of the test class to allow for splitting the test
class into multipe separate test suites.

Change-Id: Ie988dda61064a9f3448120ef558b1ff2f4929ca0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:14.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47304/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47304/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39756/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8215/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8215/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8314/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20428/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20428/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20776/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20776/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21416/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21416/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28809/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28809/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19650/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19650/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18544/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18544/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18544/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17694/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
